--- a/Logica/Logica.csproj
+++ b/Logica/Logica.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LEstudiantes.cs" />
+    <Compile Include="Library\Paginador.cs" />
     <Compile Include="Library\Librarys.cs" />
     <Compile Include="Library\TextBoxEvent.cs" />
     <Compile Include="Library\Uploadimage.cs" />
